@@ -1,9 +1,15 @@
+beryllium (0.3.12) debian;
+
+  * Slash in patient id fix
+
+ -- Pavel Bludov <pbludov@gmail.com>  Thu Sep 26 12:48:57 +0900
+
 beryllium (0.3.11) debian;
 
   * Fix SIGABRT after changing folder throught a dropdown submenu
   * Fix mpeg2 video storing
 
- -- Pavel Bludov <pbludov@gmail.com>  Thu, 24 Sep 2013 17:21:00 +0900
+ -- Pavel Bludov <pbludov@gmail.com>  Tue, 24 Sep 2013 17:21:00 +0900
 
 beryllium (0.3.10) debian;
 
